[package]
name = "nltt"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.2", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
tokio-stream = "0.1.12"
rand = "0.8"
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "serde"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.1"
bytes = "1.4"
log = "0.4.0"
env_logger = "0.10.0"
linked-hash-map = "0.5.6"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "get_wins_log"
path = "src/bin/get_wins_log.rs"
